# shaDow_GNN

./: .gitignore  .gitmodules  CONFIG_TEMPLATE.yml  CONTRIBUTING.md  README.md  compile.sh  install.bat  install.sh
config_train/: README.md
config_train/arxiv/leaderboard/: sage_5_ppr.yml
config_train/arxiv/pool/: gat_5_ppr.yml  gcn_5_ppr.yml  sage_3_ppr.yml  sage_5_ppr.yml
config_train/arxiv/vanilla/: gat_3_ppr.yml  gat_5_ppr.yml  gcn_3_ppr.yml  gcn_5_ppr.yml  sage_3_khop.yml  sage_3_ppr.yml  sage_5_khop.yml  sage_5_ppr.yml
config_train/collab/leaderboard/: sage_ppr.yml
config_train/flickr/pool/: gat_3_ppr.yml  gcn_5_ppr.yml  sage_5_ppr.yml
config_train/flickr/vanilla/: gat_3_ppr.yml  gat_5_ppr.yml  gcn_3_ppr.yml  gcn_5_ppr.yml  sage_3_khop.yml  sage_3_ppr.yml  sage_5_khop.yml  sage_5_ppr.yml
config_train/papers100M/: gat_5_ppr_ogb.yml  sage_5_ppr_ogb.yml
config_train/papers100M/leaderboard/: gat_ppr.yml
config_train/products/: gat_5_ppr_ogb.yml
para_graph_sampler/: README.md  install.sh  setup.py
para_graph_sampler/graph_engine/backend/: CMakeLists.txt  Graph.cpp  Graph.h  ParallelSampler.cpp  ParallelSampler.h  README.md  setup.py
scripts/: train_multiple_runs.py
shaDow/: __init__.py  data_converter.py  globals.py  layers.py  logging_base.py  main.py  metric.py  minibatch.py  models.py  postproc_CnS.py  postproc_ens.py  preproc.py  profiler.py  utils.py
shaDow/para_samplers/: CMakeLists.txt  ParallelSampler.cpp  ParallelSampler.h  base_graph_samplers.py  cpp_graph_samplers.py  py_graph_samplers.py  setup.py
(+44 files in other folders)
